--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,18 @@
     <string name="website">Website: </string>
     <string name="latitude">Latitude: </string>
     <string name="longitude">Longitude: </string>
+    <string name="locations">Locations</string>
+    <string name="view_location_details">View Location Details</string>
+    <string name="login">Login</string>
+    <string name="cancel_button">Cancel</string>
+    <string name="manager_page">Manager Page</string>
+    <string name="user_name">User Name</string>
+    <string name="email_address">Email Address</string>
+    <string name="choose_user_type">Choose User Type</string>
+    <string name="add_button">Add</string>
+    <string name="irp">iRP</string>
+    <string name="registration">Registration</string>
+    <string name="irp_decription">an internal resource planning app</string>
 
 
 
