--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,9 @@
     <string name="save_data">Save Data</string>
 
     <string name="clear_data">Clear Data</string>
+
+    <string name="search_by_name">Search Item By Name</string>
+    <string name="search_by_category">Search Item By Category</string>
+
+    <string name="item">Items:</string>
 </resources>
