Code Checker Updates: Lots of changes in variables and created Persistence data manager so that the model stays single responsibility

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="title_activity_maps">Map</string>
 
     <string name="view_map">View Map</string>
+    <string name="title_activity_starting">StartingActivity</string>
 
 
 </resources>
