--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,8 +62,8 @@
 
     <string name="view_map">View Map</string>
 
-    <string name="facebook_app_id">add late</string>
-    <string name="facebook_login_protocol_schema">add late</string>
+    <string name="facebook_app_id">2412568265426685</string>
+    <string name="fb_login_protocol_scheme">fb574823692959873</string>
 
 
 </resources>
