--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,13 @@
     <string name="locations">Locations</string>
     <string name="view_location_details">View Location Details</string>
     <string name="login">Login</string>
+
+    <string name="FBbutton">FBLogin</string>
+
+
+
+
+
     <string name="cancel_button">Cancel</string>
     <string name="manager_page">Manager Page</string>
     <string name="user_name">User Name</string>
